--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2724,6 +2724,9 @@ background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
 		z-index: 10000;
 	}
 
+
+	
+
 		#header h1 {
 			-moz-transition: opacity 0.2s ease;
 			-webkit-transition: opacity 0.2s ease;
@@ -2836,6 +2839,8 @@ background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
 				pointer-events: none;
 				opacity: 0;
 			}
+
+
 
 /* Banner */
 
@@ -3295,8 +3300,10 @@ background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
 		border: 0;
 		display: inline-block;
 		position: relative;
+		
 
 	}
+	
 
 		.image2 img {
 			border-radius: 3px;
@@ -3314,9 +3321,12 @@ background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
 			margin: 0 0 2em 2em;
 			top: 0.25em;
 		}
+		.image2{
 
+			width:700px;
+		}
 		.image2.left, .image2.right {
-			max-width: 40%;
+			width: 100%;
 		}
 
 			.image2.left img, .image2.right img {
@@ -3372,3 +3382,24 @@ background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
 						text-decoration: none;
 					  }
 					}
+
+
+					.gmaps {
+
+						width:100%;
+						padding-right: 15px
+						
+						
+					}
+
+					@media (max-width: 767px) { 
+						.nav{
+							display:none;
+						}
+					}
+					@media (max-width: 768px){
+						.nav#main-nav {
+						  display: none;
+					  }
+					  }
+					  
